welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:28: error: illegal start of simple expression
			while (r - comp > 0)}
                                            ^golomb:29: error: 'while' expected but '}' found.
		}
                ^