welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	var c = 1
	var T = new Array[Int](33)
	var r = 0
	var e = 0
	var g = 0
	var comp = 0

	T(0) = 0
	T(1) = 1
	T(2) = 2

	for (c <- 1 to 32)
	{
		if (T(c) == 0)
		{
			g = c - 1
			do
			{
				r = T(g)
				for (e <- 0 to 32)
				{
					if (T(e) == g)
					{
						comp = comp + 1
					}
				}
			while (r - comp > 0)}
		}
	}
	return T(num)
	

	
} 
